--- a/mta.yaml
+++ b/mta.yaml
@@ -3,85 +3,86 @@ ID: attachemnt
 description: A simple CAP project.
 version: 1.0.0
 modules:
-- name: attachemnt-srv
-  type: nodejs
-  path: gen/srv
-  requires:
-  - name: attachemnt-db
-  provides:
-  - name: srv-api
-    properties:
-      srv-url: ${default-url}
-  parameters:
-    buildpack: nodejs_buildpack
-  build-parameters:
-    builder: npm
-- name: attachemnt-db-deployer
-  type: hdb
-  path: gen/db
-  requires:
-  - name: attachemnt-db
-  parameters:
-    buildpack: nodejs_buildpack
-- name: attachemnt-app-content
-  type: com.sap.application.content
-  path: .
-  requires:
-  - name: attachemnt-repo-host
-    parameters:
-      content-target: true
-  build-parameters:
-    build-result: resources
+  - name: attachemnt-srv
+    type: nodejs
+    path: gen/srv
     requires:
-    - artifacts:
-      - project1.zip
-      name: project1
-      target-path: resources/
-- name: project1
-  type: html5
-  path: app/project1
-  build-parameters:
-    build-result: dist
-    builder: custom
-    commands:
-    - npm install
-    - npm run build:cf
-    supported-platforms: []
+      - name: attachemnt-db
+    provides:
+      - name: srv-api
+        properties:
+          srv-url: ${default-url}
+    parameters:
+      buildpack: nodejs_buildpack
+    build-parameters:
+      builder: npm
+  - name: attachemnt-db-deployer
+    type: hdb
+    path: gen/db
+    requires:
+      - name: attachemnt-db
+    parameters:
+      buildpack: nodejs_buildpack
+  - name: attachemnt-app-content
+    type: com.sap.application.content
+    path: .
+    requires:
+      - name: attachemnt-repo-host
+        parameters:
+          content-target: true
+    build-parameters:
+      build-result: resources
+      requires:
+        - artifacts:
+            - project1.zip
+          name: project1
+          target-path: resources/
+  - name: project1
+    type: html5
+    path: app/project1
+    build-parameters:
+      build-result: dist
+      builder: custom
+      commands:
+        - npm install
+        - npm run build:cf
+      supported-platforms:
+        []
 resources:
-- name: attachemnt-db
-  type: com.sap.xs.hdi-container
-  parameters:
-    service: hana
-    service-plan: hdi-shared
-- name: attachemnt-repo-host
-  type: org.cloudfoundry.managed-service
-  parameters:
-    service: html5-apps-repo
-    service-name: attachemnt-html5-srv
-    service-plan: app-host
-- name: attachemnt-destination-service
-  type: org.cloudfoundry.managed-service
-  parameters:
-    config:
-      HTML5Runtime_enabled: false
-      init_data:
-        instance:
-          destinations:
-          - Authentication: NoAuthentication
-            Name: ui5
-            ProxyType: Internet
-            Type: HTTP
-            URL: https://ui5.sap.com
-          existing_destinations_policy: update
-      version: 1.0.0
-    service: destination
-    service-name: attachemnt-destination-service
-    service-plan: lite
+  - name: attachemnt-db
+    type: com.sap.xs.hdi-container
+    parameters:
+      service: hana
+      service-plan: hdi-shared
+  - name: attachemnt-repo-host
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: html5-apps-repo
+      service-name: attachemnt-html5-srv
+      service-plan: app-host
+  - name: attachemnt-destination-service
+    type: org.cloudfoundry.managed-service
+    parameters:
+      config:
+        HTML5Runtime_enabled: false
+        init_data:
+          instance:
+            destinations:
+              - Authentication: NoAuthentication
+                Name: ui5
+                ProxyType: Internet
+                Type: HTTP
+                URL: https://ui5.sap.com
+            existing_destinations_policy: update
+        version: 1.0.0
+      service: destination
+      service-name: attachemnt-destination-service
+      service-plan: lite
 parameters:
   deploy_mode: html5-repo
   enable-parallel-deployments: true
 build-parameters:
   before-all:
-  - builder: custom
-    commands:
-    - npx cds build --production
+    - builder: custom
+      commands:
+        - npx cds build --production
